# sava_engine

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
include/: savapi.h  stchar.h
include/openssl/: evp.h
src/: AesUtil.cpp  AesUtil.h  Base64.h  DbConnector.cpp  DbConnector.h  DbService.cpp  DbService.h  SavaDetecator.cpp  SavaDetecator.h  TaskRunner.cpp  TaskRunner.h  ThreadPool.h  common.cpp  common.h
