cmake_minimum_required(VERSION 3.6.2)
project(sava_scan)

set(CMAKE_CXX_STANDARD 11)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(/usr/local/include/hiredis)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/bin)
link_directories(/usr/local/lib/)
add_definitions(-D_UNIX -D_UNICODE -Wl,-rpath,'$$ORIGIN' -lsavapi  --std=c++11)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
message("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
set(SRC_CLASSES)
file(GLOB SRC_CLASSES src/*.*)
list(APPEND GAME_SOURCE_MINE ${SRC_CLASSES})
add_executable(${PROJECT_NAME} main.cpp ${GAME_SOURCE_MINE})
target_link_libraries(${PROJECT_NAME} -lsavapi -lhiredis -lssl -lcrypto)
